--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#f06373</color>
+    <color name="colorPrimaryDark">#cc4053</color>
+    <color name="colorAccent">#3AD0D8</color>
+    <color name="colorAccent_rose">#f27b89</color>
+    <color name="colorAccent_deepBlue">#414f63</color>
+    <color name="colorFont1">#565455</color>
+    <color name="colorFont2">#a7a6ab</color>
+    <color name="colorFont3">#a2a8b4</color>
+    <color name="colorBG">#f9f9f9</color>
+    <color name="colorBorder">#eaeaea</color>
 </resources>
