--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#f06373</color>
     <color name="colorPrimaryDark">#cc4053</color>
-    <color name="colorAccent">#3AD0D8</color>
+    <color name="colorAccent">#3ad0d8</color>
     <color name="colorAccent_rose">#f27b89</color>
     <color name="colorAccent_deepBlue">#414f63</color>
     <color name="colorFont1">#565455</color>
