--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -47,7 +47,8 @@
         android:layout_below="@+id/typeIngredient"
         android:layout_alignParentStart="true"
         android:layout_marginTop="44dp"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/customborder"/>
 
     <Button
         android:id="@+id/buttonSearch"
