--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -27,7 +27,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="65dp"
@@ -35,20 +35,29 @@
 
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="499dp"
+            android:layout_width="0dp"
+            android:layout_height="500dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_weight="0.10"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_weight="0.31" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btn_Add_recipeAdd"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="1"
-            android:text="Button" />
+            android:layout_weight="0.20"
+            android:text="Add"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/container"
+            android:layout_marginRight="16dp"
+            app:layout_constraintRight_toRightOf="parent" />
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
