--- a/app/src/main/res/layout/fragment_add_howto.xml
+++ b/app/src/main/res/layout/fragment_add_howto.xml
@@ -18,7 +18,7 @@ tools:context="com.hanson.android.recipe.AddHowtoFragment">
     app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/txt_ADD_Howto"
         android:layout_width="374dp"
         android:layout_height="467dp"
         android:layout_marginLeft="8dp"
@@ -27,7 +27,6 @@ tools:context="com.hanson.android.recipe.AddHowtoFragment">
         android:ems="10"
         android:hint="Maximum 450 latter"
         android:inputType="textMultiLine"
-        android:textAlignment="viewStart"
         android:theme="?attr/editTextStyle"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintLeft_toLeftOf="parent"
