--- a/app/src/main/res/layout/fragment_add_ingredient.xml
+++ b/app/src/main/res/layout/fragment_add_ingredient.xml
@@ -18,45 +18,48 @@ tools:context="com.hanson.android.recipe.AddIngredientFragment">
     app:layout_constraintLeft_toLeftOf="parent"
     android:layout_marginRight="8dp"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintHorizontal_bias="0.024" />
+    app:layout_constraintHorizontal_bias="0.024"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp" />
 
 <EditText
     android:id="@+id/txt_Add_IngredientAdd"
     android:layout_width="267dp"
     android:layout_height="38dp"
-    android:layout_marginTop="23dp"
+    android:layout_marginTop="33dp"
     android:ems="10"
     android:inputType="textPersonName"
     app:layout_constraintTop_toBottomOf="@+id/textView8"
     android:layout_marginLeft="8dp"
-    app:layout_constraintLeft_toLeftOf="parent" />
+    app:layout_constraintLeft_toLeftOf="parent"
+    android:layout_marginStart="8dp" />
 
 <Button
     android:id="@+id/btn_Add_IngredientAdd"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="16dp"
-    android:layout_marginLeft="8dp"
     android:layout_marginStart="8dp"
     android:text="Button"
+    tools:layout_editor_absoluteY="56dp"
     app:layout_constraintLeft_toRightOf="@+id/txt_Add_IngredientAdd"
-    android:layout_marginRight="8dp"
-    app:layout_constraintRight_toRightOf="parent"
-    android:layout_marginTop="23dp"
-    app:layout_constraintTop_toBottomOf="@+id/textView8"
-    app:layout_constraintHorizontal_bias="0.505" />
+    android:layout_marginLeft="8dp" />
 
 
     <ListView
         android:id="@+id/ListView_Add_Ingredient"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Add_IngredientAdd" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_Add_IngredientAdd"
+        android:layout_marginTop="24dp" />
 
 
 </android.support.constraint.ConstraintLayout>
