--- a/app/src/main/res/layout/fragment_add_ingredientitem.xml
+++ b/app/src/main/res/layout/fragment_add_ingredientitem.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/txt_ingredient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
         android:layout_weight="1"
-        android:textColor="@android:color/white" />
+        android:textAlignment="viewStart"
+        android:textColor="@color/colorFont1"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imageView4"
