--- a/app/src/main/res/layout/fragment_add_howto.xml
+++ b/app/src/main/res/layout/fragment_add_howto.xml
@@ -12,25 +12,43 @@ tools:context="com.hanson.android.recipe.AddHowtoFragment">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="How to"
+    android:layout_marginTop="24dp"
+    android:layout_marginLeft="24dp"
+    android:textColor="@color/colorAccent_deepBlue"
+    android:textSize="18sp"
+    app:layout_constraintHorizontal_bias="0.024"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    android:layout_marginTop="8dp"
-    android:layout_marginLeft="8dp"
-    app:layout_constraintLeft_toLeftOf="parent" />
+    android:layout_marginRight="24dp"
+    android:layout_marginStart="24dp"
+    android:layout_marginEnd="24dp" />
 
     <EditText
         android:id="@+id/txt_ADD_Howto"
-        android:layout_width="374dp"
-        android:layout_height="467dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="43dp"
+        android:layout_width="390dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/editborder"
         android:ems="10"
+        android:gravity="top"
         android:hint="Maximum 450 latter"
         android:inputType="textMultiLine"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
         android:theme="?attr/editTextStyle"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
