--- a/app/src/main/res/layout/fragment_add_ingredient.xml
+++ b/app/src/main/res/layout/fragment_add_ingredient.xml
@@ -7,59 +7,76 @@ android:layout_height="match_parent"
 tools:context="com.hanson.android.recipe.AddIngredientFragment">
 
 
-<TextView
-    android:id="@+id/textView8"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:text="Ingredients"
-    app:layout_constraintTop_toTopOf="parent"
-    android:layout_marginLeft="8dp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    android:layout_marginRight="8dp"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintHorizontal_bias="0.024"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp" />
-
-<EditText
-    android:id="@+id/txt_Add_IngredientAdd"
-    android:layout_width="267dp"
-    android:layout_height="38dp"
-    android:layout_marginTop="33dp"
-    android:ems="10"
-    android:inputType="textPersonName"
-    app:layout_constraintTop_toBottomOf="@+id/textView8"
-    android:layout_marginLeft="8dp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    android:layout_marginStart="8dp" />
-
-<Button
-    android:id="@+id/btn_Add_IngredientAdd"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:text="Button"
-    tools:layout_editor_absoluteY="56dp"
-    app:layout_constraintLeft_toRightOf="@+id/txt_Add_IngredientAdd"
-    android:layout_marginLeft="8dp" />
-
-
-    <ListView
-        android:id="@+id/ListView_Add_Ingredient"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="24dp"
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="24dp"
+        android:text="Ingredients"
+        android:textColor="@color/colorAccent_deepBlue"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.024"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_Add_IngredientAdd"
-        android:layout_marginTop="24dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="395dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:id="@+id/linearLayout">
+
+        <EditText
+            android:id="@+id/txt_Add_IngredientAdd"
+            android:layout_width="280dp"
+            android:layout_height="40dp"
+            android:background="@drawable/editborder"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+        <Button
+            android:id="@+id/btn_Add_IngredientAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/greenbutton"
+            android:text="Add"
+            android:textColor="@android:color/white"
+            app:layout_constraintLeft_toRightOf="@+id/txt_Add_IngredientAdd"
+            tools:layout_editor_absoluteY="56dp" />
+    </LinearLayout>
+
+
+    <ListView
+        android:id="@+id/ListView_Add_Ingredient"
+        android:layout_width="395dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 
 </android.support.constraint.ConstraintLayout>
