--- a/app/src/main/res/layout/fragment_add_ingredientitem.xml
+++ b/app/src/main/res/layout/fragment_add_ingredientitem.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:background="@android:color/white"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/txt_ingredient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_weight="1"
         android:textAlignment="viewStart"
         android:textColor="@color/colorFont1"
@@ -22,6 +23,7 @@
         android:id="@+id/imageView4"
         android:layout_width="28dp"
         android:layout_height="28dp"
-        android:layout_weight="1"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginRight="30dp"
         app:srcCompat="@android:drawable/ic_delete" />
 </LinearLayout>
