--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -1,18 +1,20 @@
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_Add_Recipe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.hanson.android.recipe.AddRecipeFragment"
     android:focusable="true"
-    android:focusableInTouchMode="true">
-
+    android:focusableInTouchMode="true"
+    >
 
     <ImageView
         android:id="@+id/imgv_Add_Image"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_alignParentTop="true"
         android:background="@color/colorFont3"
         android:scaleType="fitXY"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,37 +25,42 @@
         android:id="@+id/btn_Add_Camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_menu_camera"
-        app:layout_constraintBottom_toBottomOf="@+id/imgv_Add_Image"
+        android:layout_alignRight="@+id/imgv_Add_Image"
+        android:layout_below="@+id/imgv_Add_Image"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="-50dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgv_Add_Image"
         app:layout_constraintRight_toRightOf="@+id/imgv_Add_Image"
-        android:layout_marginEnd="8dp" />
+        app:srcCompat="@drawable/ic_menu_camera" />
 
     <EditText
         android:id="@+id/txt_Add_NewName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/btn_Add_Camera"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/editborder"
         android:ems="10"
-        android:hint="Name"
+        android:hint="Recipe Name"
         android:inputType="textPersonName"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgv_Add_Image" />
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp" />
 
     <TextView
         android:id="@+id/txt_Add_Author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="shyjoo"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/txt_Add_NewName"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:text=""
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_Add_NewName" />
 
@@ -61,22 +68,23 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_below="@+id/txt_Add_Author"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
         android:text="Country"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/txt_Add_Author" />
 
     <Spinner
         android:id="@+id/spinner_Add_Country"
         android:layout_width="311dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="7dp"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_below="@+id/txt_Add_Author"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
         android:entries="@array/countryName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -85,28 +93,31 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/spinner_Add_Country"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
         android:text="Description"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_Add_Country"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_Add_Country" />
 
     <EditText
         android:id="@+id/txt_Add_Description"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_alignParentBottom="false"
+        android:layout_below="@+id/textView6"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/editborder"
         android:ems="10"
+        android:gravity="top"
         android:inputType="textMultiLine"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-</android.support.constraint.ConstraintLayout>
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp" />
+</RelativeLayout>
