--- a/app/src/main/res/layout/fragment_home_recipeitem.xml
+++ b/app/src/main/res/layout/fragment_home_recipeitem.xml
@@ -2,30 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="90dp"
-    android:layout_height="90dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/img_mainListItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         android:layout_marginBottom="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:scaleType="fitXY" />
 
-    <GridLayout
+    <TextView
+        android:id="@+id/txt_mainListItem"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="-40dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
-        android:background="@android:color/black">
-
-        <TextView
-            android:id="@+id/txt_mainListItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@android:color/white" />
-    </GridLayout>
+        android:maxLines="2"
+        android:textColor="@color/colorFont1" />
 
 </LinearLayout>
