Miju connect from SearchResult to RecipeList

--- a/app/src/main/res/layout/fragment_add_howto.xml
+++ b/app/src/main/res/layout/fragment_add_howto.xml
@@ -27,11 +27,11 @@ tools:context="com.hanson.android.recipe.AddHowtoFragment">
     <EditText
         android:id="@+id/txt_ADD_Howto"
         android:layout_width="390dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/editborder"
