--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -1,14 +1,24 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/txt_recipeListTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
+        android:minHeight="20dp"
+        android:text="TextView" />
 
     <ListView
         android:id="@+id/listview_recipelist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="#a7a6ab"
-        android:dividerHeight="1dp"
+        android:layout_marginTop="16dp"
         android:choiceMode="singleChoice"
-        />
+        android:divider="#a7a6ab"
+        android:dividerHeight="1dp" />
 </LinearLayout>
