--- a/app/src/main/res/layout/fragment_category_item.xml
+++ b/app/src/main/res/layout/fragment_category_item.xml
@@ -2,17 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/categoryitem_img"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:layout_weight="1.13" />
 
     <TextView
         android:id="@+id/categoryitem_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"/>
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_weight="0.35"
+        android:gravity="center"
+        android:text="Country"
+        android:textSize="35dp"
+        android:visibility="visible" />
+
+
 </LinearLayout>
