--- a/app/src/main/res/layout/activity_recipe_list_item.xml
+++ b/app/src/main/res/layout/activity_recipe_list_item.xml
@@ -4,13 +4,15 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/colorBG">
 
     <ImageView
         android:id="@+id/listItem_image"
         android:layout_width="175dp"
         android:layout_height="match_parent"
-        android:layout_gravity="fill" />
+        android:layout_gravity="fill"
+        />
 
     <LinearLayout
         android:orientation="vertical"
