Miju 1. locked screen rotation 2. Fixed search button existing(Only Home screen has) 3. Fixed uncounting bug when click the like button at recipe screen and go back the recipe list screen 4. Fixed unselecting home menu in slide menu when go back from another screen 4. Fixed camera permission at addRecipeFragment 5. improving UX in AddRecipe screen

--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
@@ -12,8 +12,10 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -27,32 +29,75 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="65dp"
-        android:orientation="vertical">
+        android:layout_marginTop="56dp"
+        android:background="@color/colorFragmentBG"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appbar">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
-            android:layout_width="0dp"
-            android:layout_height="500dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_weight="0.10"
+            android:layout_width="match_parent"
+            android:layout_height="524dp"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorBG"
+            android:paddingBottom="24dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/container"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="2dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/container">
+
+            <ImageView
+                android:id="@+id/imgv_Add_navi1"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/greenbutton" />
+
+            <ImageView
+                android:id="@+id/imgv_Add_navi2"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/graybackground" />
+
+            <ImageView
+                android:id="@+id/imgv_Add_navi3"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/graybackground" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/btn_Add_recipeAdd"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="160dp"
-            android:layout_height="40dp"
+            android:layout_height="48dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/container"
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_weight="0.20"
             android:background="@drawable/deepbluebutton"
             android:text="Add Recipe"
@@ -60,6 +105,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/container" />
 
-    </android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</android.support.constraint.ConstraintLayout>
