--- a/app/src/main/res/layout/fragment_add_howto.xml
+++ b/app/src/main/res/layout/fragment_add_howto.xml
@@ -1,34 +1,51 @@
-
-<android.support.constraint.ConstraintLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.hanson.android.recipe.AddHowtoFragment">
+    android:id="@+id/root_Add_howto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.hanson.android.recipe.AddHowtoFragment">
 
-<TextView
-    android:id="@+id/textView9"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="How to"
-    android:layout_marginTop="24dp"
-    android:layout_marginLeft="24dp"
-    android:textColor="@color/colorAccent_deepBlue"
-    android:textSize="18sp"
-    app:layout_constraintHorizontal_bias="0.024"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:layout_marginRight="24dp"
-    android:layout_marginStart="24dp"
-    android:layout_marginEnd="24dp" />
+    <TextView
+        android:id="@+id/txt_Add_step2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        android:background="@color/colorFont1"
+        android:gravity="center"
+        android:paddingBottom="2dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="2dp"
+        android:text="STEP3 "
+        android:textColor="@android:color/white"
+        android:textSize="17sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:text="How to"
+        android:textColor="@color/colorAccent_deepBlue"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.024"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txt_ADD_Howto"
         android:layout_width="390dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="30dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
