--- a/app/src/main/res/layout/fragment_add_ingredient.xml
+++ b/app/src/main/res/layout/fragment_add_ingredient.xml
@@ -6,7 +6,25 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context="com.hanson.android.recipe.AddIngredientFragment">
 
-
+    <TextView
+        android:id="@+id/txt_Add_step2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        android:background="@color/colorFont1"
+        android:drawableRight="@drawable/ic_arrow"
+        android:gravity="center"
+        android:paddingBottom="2dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="2dp"
+        android:text="STEP2 "
+        android:textColor="@android:color/white"
+        android:textSize="17sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
@@ -69,7 +87,6 @@ tools:context="com.hanson.android.recipe.AddIngredientFragment">
         android:id="@+id/ListView_Add_Ingredient"
         android:layout_width="395dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="24dp"
