--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -10,39 +10,56 @@
     android:focusableInTouchMode="true"
     >
 
-    <ImageView
-        android:id="@+id/imgv_Add_Image"
+    <FrameLayout
+        android:id="@+id/fame_Add_top"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@color/colorFont3"
-        android:scaleType="fitXY"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageButton
-        android:id="@+id/btn_Add_Camera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/imgv_Add_Image"
-        android:layout_below="@+id/imgv_Add_Image"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="-50dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgv_Add_Image"
-        app:layout_constraintRight_toRightOf="@+id/imgv_Add_Image"
-        app:srcCompat="@drawable/ic_menu_camera" />
+        <ImageView
+            android:id="@+id/imgv_Add_Image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@color/colorFont3"
+            android:scaleType="fitXY" />
+
+        <TextView
+            android:id="@+id/txt_Add_step1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            android:background="@color/colorFont1"
+            android:drawableRight="@drawable/ic_arrow"
+            android:gravity="center"
+            android:paddingBottom="2dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="2dp"
+            android:text="STEP1 "
+            android:textColor="@android:color/white"
+            android:textSize="17sp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_Add_Camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="24dp"
+            app:srcCompat="@drawable/ic_menu_camera" />
+    </FrameLayout>
 
     <EditText
         android:id="@+id/txt_Add_NewName"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/btn_Add_Camera"
+        android:layout_below="@+id/fame_Add_top"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/editborder"
         android:ems="10"
         android:hint="Recipe Name"
