--- a/app/src/main/res/layout/fragment_category_item.xml
+++ b/app/src/main/res/layout/fragment_category_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="160dp"
     android:orientation="horizontal"
@@ -8,22 +9,28 @@
 
     <ImageView
         android:id="@+id/categoryitem_img"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:layout_weight="1.13" />
+        android:layout_weight="1.13"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/categoryitem_text"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
         android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
         android:layout_weight="0.35"
+        android:background="@color/colorFont1"
         android:gravity="center"
+        android:paddingBottom="2dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="20dp"
+        android:paddingTop="2dp"
         android:text="Country"
-        android:textSize="35dp"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
         android:visibility="visible" />
 
 
-</LinearLayout>
+</FrameLayout>
